deco1.css
body
{
  background: black !important;
  font-family: 'Gloria Hallelujah', cursive !important;
  color: #777;
}

.courses
{
  text-align: justify
}

.cat1
{
position:relative;
display: inline-block;
float:left;
padding:10px;
}

.cat2
{
position:relative;
display: inline-block;
padding:10px;
}

.cat3
{
position:relative;
display: inline-block;
float:right;
margin-right:50%;
padding:10px;
}

p
{
  text-align: center;
}

h1
{
  margin: 10px 0 30px 0;
  letter-spacing: 10px;      
  font-size: 30px;
  color: #ffffff;
}

h3, h4
{
  margin: 10px 0 30px 0;
  letter-spacing: 10px;      
  font-size: 20px;
  color: #ffffff;
}

.project
{
  border: 10px solid transparent;
  margin-bottom: 25px;
  width: 80%;
  height: 80%;
  opacity: 0.8;
}

.project:hover
{
  border-color: #dfdfdf;
  opacity: 1;
}

.container
{
  padding: 80px 120px;
}


.bg-1
{
  background: #2d2d30;
  color: #bdbdbd;
}

.bg-1 h3 {color: #fff;}

.prof
{
  font-family: 'Ubuntu', sans-serif !important;
}

.nav-tabs li a
{
  color: #777;  
}

.navbar
{
  margin-bottom: 0;
  background-color: #2d2d30;
  border: 0;
  font-size: 14px !important;
  letter-spacing: 4px;
  opacity: 0.9;
}

.navbar li a, .navbar .navbar-brand
{ 
  color: #d5d5d5 !important;
}

.navbar-nav li a:hover
{
  color: #fff !important;
}

.navbar-nav li.active a
{
  color: #fff !important;
  background-color: #29292c !important;
}

.navbar-default .navbar-toggle
{
  border-color: transparent;
}


footer
{
  background-color: #2d2d30;
  color: #f5f5f5;
  padding: 32px;
}

footer a
{
  color: #f5f5f5;
}

footer a:hover
{
  color: #777;
  text-decoration: none;
}  

.form-control
{
  border-radius: 0;
}

textarea
{
  resize: none;
}

